--- a/styles/style.css
+++ b/styles/style.css
@@ -3,18 +3,23 @@
 }
 
 .header {
-    background-image: url('../images/banner-bg.png');
-    background-repeat: no-repeat;
-    width: 100%;
-    height: auto;
-    /* padding-left: 120px; */
+    margin-top: -960px;
 }
-
+.nav-banner{
+    position: relative;
+    top: 920px;
+    padding-left: 70px;
+    padding-top: 100px;
+}
+.banner-bg-img{
+    width: 100%;
+    height: 800px;
+}
 .nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 60px;
+    
 }
 
 .nav-images {
@@ -36,6 +41,7 @@
 .nav-group-icon {
     width: 149.925px;
     height: 15.887px;
+    padding-right: 80px;
 }
 
 /* banner */
@@ -73,7 +79,7 @@
 .banner-title p {
     color: #003B60;
     font-family: Li Niladri Rongtuli Unicode;
-    font-size: 55px;
+    font-size: 50px;
     font-weight: 550;
 }
 
@@ -133,19 +139,21 @@
 
 .banner-price-description {
     color: #012A4A;
-    font-family: Li Ador Noirrit;
-    font-size: 25px;
-    font-weight: 400;
+    font-size: 20px;
     padding-bottom: 70px;
+    width: 430px;
 }
 
 .blue-jeans-banner-img {
-    width: 663px;
-    height: 652px;
+    width: 500px;
+    height: 500px;
 }
 
 /* product details */
-.product-details {}
+
+.product-details {
+    width: 100%;
+}
 
 .product-description {
     margin: 0 150px;
@@ -154,6 +162,7 @@
     font-size: 18px;
     font-weight: 400;
     margin-bottom: 50px;
+    margin-top: 50px;
 }
 
 .product-description-point {
@@ -255,6 +264,9 @@
 
 /* product details end */
 /* jeans feature section start */
+.jeans-features-section{
+    width: 100%;
+}
 .jeans-features {
     background-color: #F0F9FF;
     padding-bottom: 160px;
@@ -494,3 +506,133 @@
     padding: 7px;
 }
 /* jeans features section end */
+
+/* order section start */
+.order-section{
+     margin-top: -330px;
+}
+.order-headline{
+    position: relative;
+    top: 370px;
+    text-align: center;
+}
+.order-headline h2{
+    color: #FFF;
+font-size: 35px;
+}
+.billing-order-form{
+    display: flex;
+    gap: 50px;
+    justify-content: center;
+    
+}
+.billing-address{
+    position: relative;
+    top: 400px;
+    color: #FFF;
+}
+.billing-name{
+    border: 1px solid #FFF;
+    border-radius: 4px;
+    padding: 2px 170px 2px 4px;
+    margin-top: 10px;
+}
+.billing-mobile{
+    border: 1px solid #FFF;
+    border-radius: 4px;
+    padding: 2px 170px 2px 4px;
+    margin-top: 15px;
+}
+.address{
+    border: 1px solid #FFF;
+    border-radius: 4px;
+    padding: 2px 170px 2px 4px;
+    margin-top: 15px;
+}
+.payment-box{
+    margin-top: 15px
+}
+.bg-white{
+    background-color: #FFF;
+    padding: 10px;
+    border-radius: 20px 0 0 0;
+}
+.bg-white p{
+    color: black;
+}
+.bg-blue{
+    background-color: #003B60;
+    padding: 10px;
+    border-radius: 0 0 20px 0;
+}
+.order-bg-img{
+    width: 100%;
+}
+
+.order{
+    position: relative;
+    top: 400px;
+    color: #FFF;
+}
+
+.footer-details{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 70px;
+    background-color: #003B60;
+    width: 80%;
+    border-radius: 40px 0;
+    position: relative;
+    bottom: 400px;
+    left: 60px;
+   
+}
+.links{
+    color: #FFF;
+}
+.links h4,p{
+    margin-bottom: 12px;
+}
+.footer-icon{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.footer-icon img{
+    width: max-content;
+}
+.for-order{
+    color: #F0E615;
+    margin-bottom: 10px;
+}
+.phone-no{
+    color: #FFF;
+}
+.footer-jeans-div{
+    position: relative;
+    bottom: 5px;
+}
+.footer-jeans-img{
+    width: 100%;
+}
+.social-icon{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    justify-content: center;
+    position: relative;
+    bottom: 350px;
+}
+.footer-text{
+    color: #FFF;
+    text-align: center;
+    position: relative;
+    bottom: 310px;
+    background: linear-gradient(0deg, #003B60 0%, rgba(0, 59, 96, 0.00) 100%);
+    padding-bottom: 10px;
+}
+.funnel{
+    color: #F0E615;
+    font-weight: bold;
+}
